--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <h2>Favorite Stores 🛍 </h2>
       <p>Below I will list some of my favorite stores.</p>
       <ol>
-          <li><a href ="shop.lululemon.com">lululemon</a></li>
-          <li><a href ="bloomingdales.com">bloomingdales</a></li>
+          <li><a href ="https://shop.lululemon.com">lululemon</a></li>
+          <li><a href ="https://bloomingdales.com">bloomingdales</a></li>
       </ol>
   <footer> <address> (c) Sophia Flaum LIS 351 Spring 2021. </address> </footer>
 </body>
